updated api response to match monolith. added tracing , docker files

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -35,13 +35,26 @@ spring.modulith.events.externalization.enabled=false
 spring.modulith.republish-outstanding-events-on-restart=true
 
 # Actuator Configuration
-management.endpoints.web.exposure.include=health,info,metrics,prometheus,modulith
+management.endpoints.web.exposure.include=health,info,metrics,prometheus,modulith,trace,beans,env
 management.endpoint.health.show-details=always
+management.endpoint.health.probes.enabled=true
+management.endpoint.metrics.enabled=true
+management.endpoint.prometheus.enabled=true
 management.metrics.export.prometheus.enabled=true
+management.metrics.tags.application=${spring.application.name}
+management.metrics.tags.version=@project.version@
+management.metrics.distribution.percentiles-histogram.http.server.requests=true
+management.metrics.distribution.slo.http.server.requests=50ms,100ms,200ms,500ms
+management.metrics.web.server.request.autotime.enabled=true
 
-# Tracing Configuration  
+# Tracing Configuration (Zipkin)
 management.tracing.sampling.probability=1.0
+management.tracing.enabled=true
 management.zipkin.tracing.endpoint=http://localhost:9411/api/v2/spans
+management.tracing.baggage.correlation.enabled=true
+management.tracing.baggage.correlation.fields=userId,requestId
+management.tracing.baggage.remote-fields=userId,requestId
+logging.pattern.correlation=[${spring.application.name:},%X{traceId:-},%X{spanId:-}]
 
 # Application Configuration
 spring.application.name=library-modulith
