--- a/src/main/resources/application-docker.properties
+++ b/src/main/resources/application-docker.properties
@@ -15,12 +15,8 @@ spring.h2.console.settings.web-allow-others=true
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=false
 
-# Tracing Configuration (Docker Zipkin)
-management.tracing.sampling.probability=1.0
-management.zipkin.tracing.endpoint=http://zipkin:9411/api/v2/spans
-
 # Actuator for Docker
-management.endpoints.web.exposure.include=health,info,metrics,prometheus,modulith
+management.endpoints.web.exposure.include=health,info,modulith
 management.endpoint.health.show-details=always
 
 # Logging for Docker
