--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -17,13 +17,9 @@ spring.jpa.properties.hibernate.format_sql=false
 spring.h2.console.enabled=false
 
 # Enhanced Actuator for Production
-management.endpoints.web.exposure.include=health,info,metrics,prometheus
+management.endpoints.web.exposure.include=health,info
 management.endpoint.health.show-details=when-authorized
 management.security.enabled=true
-
-# Tracing Configuration (External Zipkin)
-management.tracing.sampling.probability=0.1
-management.zipkin.tracing.endpoint=http://zipkin:9411/api/v2/spans
 
 # Logging Configuration for Production
 logging.level.root=WARN
@@ -39,8 +35,3 @@ spring.datasource.hikari.minimum-idle=10
 spring.datasource.hikari.connection-timeout=20000
 spring.datasource.hikari.idle-timeout=300000
 spring.datasource.hikari.max-lifetime=1200000
-
-# JVM Metrics
-management.metrics.export.prometheus.descriptions=true
-management.metrics.distribution.percentiles.jvm.memory.used=0.5,0.95,0.99
-management.metrics.distribution.percentiles.jvm.gc.pause=0.5,0.95,0.99
