--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -39,6 +39,11 @@ management.endpoints.web.exposure.include=health,info,modulith
 management.endpoint.health.show-details=always
 management.endpoint.health.probes.enabled=true
 
+# Disable Tracing
+management.tracing.enabled=false
+management.tracing.sampling.probability=0.0
+logging.level.brave.Tracer=OFF
+
 # Application Configuration
 spring.application.name=library-modulith
 spring.jpa.open-in-view=false
